# zrc-bot

./: .env.example  .gitignore  README.md  bot.py  pyproject.toml  requirements.txt
docs/: maimai_cn.md  ping.md  roll.md  word_bank_qa.md
migrations/versions/: 0de5d6a4ab7e_.py
resources/mai/: b50.html  b50_dev.html
src/: consts.py
src/plugins/help/: __init__.py  config.py
src/plugins/help/template/: text.html
src/plugins/maimai_cn/: __init__.py  alconna.py  cmd_base.py  cmd_score.py  config.py  models.py
src/plugins/maimai_cn/lib/: mai_cn.py  maimai_py_ext.py
src/plugins/maimai_cn/lib/pics/: b50.py  lib.py
src/plugins/ping/: __init__.py
src/plugins/roll/: __init__.py
src/plugins/union_account/: __init__.py  consts.py  depends.py  models.py
src/plugins/word_bank_qa/: __init__.py  alconna.py  models.py
src/plugins/word_bank_qa/migrations/: c193ecebf158_.py
